// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTopics multi structure 1`] = `
Object {
  "/docs-starter-kit/beta/navigation/examples/": Object {
    "contentType": "example",
    "description": "Replace me.",
    "language": Array [
      "JavaScript",
    ],
    "layout": "example",
    "navOrder": 3,
    "path": "/docs-starter-kit/beta/navigation/examples/",
    "title": "Examples",
    "topics": Array [
      Object {
        "count": 3,
        "name": "Cool",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/beta/navigation/examples/example-1/",
            "text": "Example 1",
            "thumbnail": "header-image",
            "title": "Example 1",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/beta/navigation/examples/example-1/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/beta/navigation/examples/example-2/",
            "text": "Example 2",
            "thumbnail": "header-image",
            "title": "Example 2",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/beta/navigation/examples/example-2/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/beta/navigation/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/beta/navigation/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/beta/navigation/examples/#cool",
      },
      Object {
        "count": 1,
        "name": "Awesome",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/beta/navigation/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/beta/navigation/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/beta/navigation/examples/#awesome",
      },
    ],
  },
  "/docs-starter-kit/maps/examples/": Object {
    "contentType": "example",
    "description": "Replace me.",
    "language": Array [
      "JavaScript",
    ],
    "layout": "example",
    "navOrder": 3,
    "path": "/docs-starter-kit/maps/examples/",
    "title": "Examples",
    "topics": Array [
      Object {
        "count": 3,
        "name": "Cool",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/maps/examples/example-1/",
            "text": "Example 1",
            "thumbnail": "header-image",
            "title": "Example 1",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/maps/examples/example-1/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/maps/examples/example-2/",
            "text": "Example 2",
            "thumbnail": "header-image",
            "title": "Example 2",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/maps/examples/example-2/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/maps/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/maps/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/maps/examples/#cool",
      },
      Object {
        "count": 1,
        "name": "Awesome",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/maps/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/maps/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/maps/examples/#awesome",
      },
    ],
  },
  "/docs-starter-kit/navigation/examples/": Object {
    "contentType": "example",
    "description": "Replace me.",
    "language": Array [
      "JavaScript",
    ],
    "layout": "example",
    "navOrder": 3,
    "path": "/docs-starter-kit/navigation/examples/",
    "title": "Examples",
    "topics": Array [
      Object {
        "count": 3,
        "name": "Cool",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/navigation/examples/example-1/",
            "text": "Example 1",
            "thumbnail": "header-image",
            "title": "Example 1",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/navigation/examples/example-1/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/navigation/examples/example-2/",
            "text": "Example 2",
            "thumbnail": "header-image",
            "title": "Example 2",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/navigation/examples/example-2/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/navigation/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/navigation/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/navigation/examples/#cool",
      },
      Object {
        "count": 1,
        "name": "Awesome",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/navigation/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/navigation/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/navigation/examples/#awesome",
      },
    ],
  },
  "/docs-starter-kit/vision/examples/": Object {
    "contentType": "example",
    "description": "Replace me.",
    "language": Array [
      "JavaScript",
    ],
    "layout": "example",
    "navOrder": 3,
    "path": "/docs-starter-kit/vision/examples/",
    "title": "Examples",
    "topics": Array [
      Object {
        "count": 3,
        "name": "Cool",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/vision/examples/example-1/",
            "text": "Example 1",
            "thumbnail": "header-image",
            "title": "Example 1",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/vision/examples/example-1/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/vision/examples/example-2/",
            "text": "Example 2",
            "thumbnail": "header-image",
            "title": "Example 2",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/vision/examples/example-2/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/vision/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/vision/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/vision/examples/#cool",
      },
      Object {
        "count": 1,
        "name": "Awesome",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/vision/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/vision/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/vision/examples/#awesome",
      },
    ],
  },
}
`;

exports[`buildTopics single structure 1`] = `
Object {
  "/docs-starter-kit/examples/": Object {
    "contentType": "example",
    "description": "Replace me.",
    "language": Array [
      "JavaScript",
    ],
    "layout": "example",
    "navOrder": 3,
    "path": "/docs-starter-kit/examples/",
    "title": "Examples",
    "topics": Array [
      Object {
        "count": 3,
        "name": "Cool",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/examples/example-1/",
            "text": "Example 1",
            "thumbnail": "header-image",
            "title": "Example 1",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/examples/example-1/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/examples/example-2/",
            "text": "Example 2",
            "thumbnail": "header-image",
            "title": "Example 2",
            "topic": Array [
              "Cool",
            ],
            "url": "/docs-starter-kit/examples/example-2/",
          },
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/examples/#cool",
      },
      Object {
        "count": 1,
        "name": "Awesome",
        "pages": Array [
          Object {
            "contentType": "example",
            "description": "Replace me.",
            "language": Array [
              "JavaScript",
            ],
            "layout": "example",
            "path": "/docs-starter-kit/examples/example-3/",
            "text": "Example 3",
            "thumbnail": "header-image",
            "title": "Example 3",
            "topic": Array [
              "Cool",
              "Awesome",
            ],
            "url": "/docs-starter-kit/examples/example-3/",
          },
        ],
        "url": "/docs-starter-kit/examples/#awesome",
      },
    ],
  },
}
`;
